# openxml-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  architecture_diagrams.md  evaluation.md  operations.md
docs/pseudocode/: 00_notation.md  README.md
docs/pseudocode/01_ingestion/: 01_overview.md  02_table_xml_parsing.md
docs/pseudocode/02_reading_order/: 01_row_clustering.md
docs/pseudocode/03_relation_inference/: 01_overview.md  02_caption_scoring_and_resolution.md
docs/pseudocode/04_rendering/: 01_markdown_rendering.md  02_rag_chunk_building.md
example/: README.md
private_example/: README.md
private_testdata/: README.md
public_samples/: README.md  openxml_parser_public_sample.docx  openxml_parser_public_sample.hwpx  openxml_parser_public_sample.xlsx  openxml_parser_public_sample_layout.docx
samples/: README.md  openxml_parser_public_sample.docx  openxml_parser_public_sample.hwpx  openxml_parser_public_sample.pptx  openxml_parser_public_sample.xlsx
scripts/: build_public_samples.py  evaluate_caption_baseline.py  evaluate_golden.py
src/document_inteligence/: __init__.py
src/openxml_parser/: __init__.py
testdata/: README.md
tests/: test_containment_graph.py  test_debug_and_rag_options.py  test_document_structure.py  test_docx_layout.py  test_docx_paragraph.py  test_golden_regression.py  test_multi_format_ingestors.py  test_noise_and_annotations.py  test_pptx_image_extract_integration.py  test_pptx_ingestor_unit.py  test_pptx_table_xml_unit.py  test_public_samples_smoke.py  test_reading_order_and_markdown.py  test_real_pptx_dataset.py  test_relationships_and_rag.py  test_renderer_regression.py  test_samples_smoke.py  test_table_absorber.py  test_text_formatting.py  test_title_scope.py  test_use_case.py
(+63 files in other folders)
