[project]
name = "document-inteligence"
version = "0.1.0"
description = "XML-based document parser for LLM-friendly markdown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-pptx>=0.6.22",
]

[project.scripts]
doc-parser = "document_inteligence.interfaces.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
