[project]
name = "document-inteligence"
version = "0.1.0"
description = "Open XML document parser for LLM-friendly markdown and RAG chunks"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Gaebobman" }]
keywords = ["openxml", "pptx", "docx", "xlsx", "hwpx", "rag", "markdown", "document-parser"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "python-pptx>=0.6.22",
  "openpyxl>=3.1.0",
  "lxml>=5.0.0",
]

[project.scripts]
doc-parser = "document_inteligence.interfaces.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
